# web-optimised-video-generation

./: .editorconfig  .gitignore  CLAUDE.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  FSharpTools.slnx  cspell.json  dotnet-tools.json  justfile  mise.toml  project-words.txt  pyproject.toml  ruff.toml  web_optimise.py
.claude/rules/: fp-principles.md  weboptimise.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/config/: p10k.zsh  zsh_plugins.txt  zshrc
.devcontainer/scripts/: on-create.sh  post-create.sh  post-start.sh
src/WebOptimise/: .gitignore  Capabilities.fs  Capabilities.fsi  Cli.fs  Commands.fs  Commands.fsi  Constants.fs  Discovery.fs  Discovery.fsi  Display.fs  Domain.fs  Ebml.fs  Ebml.fsi  ModeConfig.fs  ProbeJson.fs  ProbeParse.fs  ProbeParse.fsi  Process.fs  Program.fs  Shell.fs  Shell.fsi  Verify.fs  Verify.fsi  WebOptimise.fsproj  mise.toml
src/web_optimise/: __init__.py  __main__.py  _cli.py  _commands.py  _constants.py  _discovery.py  _display.py  _modes.py  _probe.py  _process.py  _types.py  _verify.py
