[build-system]
requires = ["uv_build>=0.7,<1"]
build-backend = "uv_build"

[project]
name = "web-optimise"
version = "0.1.0"
description = "Optimise media files for progressive web delivery"
requires-python = ">=3.14,<3.16"
license = "MIT"
authors = [{ name = "Aryan Ameri", email = "github@aryan.ameri.coffee" }]
keywords = ["video", "ffmpeg", "web", "optimise", "remux", "webm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Conversion",
    "Typing :: Typed",
]
dependencies = ["rich>=14.0"]

[project.scripts]
web-optimise = "web_optimise._cli:main"

[project.urls]
Repository = "https://github.com/aryonoco/web-optimised-video-generation"

# --- PEP 735 dependency groups ---
[dependency-groups]
lint = ["ruff>=0.11,<0.12"]
types = ["pyright>=1.1.400"]

# --- Ruff (strictest, migrated from ruff.toml) ---
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Framework-specific (not applicable)
    "AIR",
    "DJ",
    "FAST",
    "NPY",
    "PD",
    # Formatter conflicts (handled by ruff format)
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
    # Docstring style: use D211 + D213
    "D203",
    "D212",
    # Copyright notice not a project convention
    "CPY",
    # Pragmatic relaxations for CLI tool
    "TRY003",
    "PLR0913",
    # ffmpeg/ffprobe are always resolved via PATH by design
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused-import (re-exports)
    "D104", # missing-docstring-in-public-package
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# --- Pyright (strict) ---
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportMissingParameterType = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
venvPath = "."
venv = ".venv"
